--- a/backend/repository/sqlc.yaml
+++ b/backend/repository/sqlc.yaml
@@ -12,6 +12,7 @@ sql:
         output_querier_file_name: querier.gen.go
         output_files_suffix: .gen
         emit_interface: true
+        emit_db_tags: true
         overrides:
           - db_type: citext
             go_type:
