fix: oapi-codegenのコード生成テンプレートをオーバーライド

--- a/backend/server/.oapi-codegen.yml
+++ b/backend/server/.oapi-codegen.yml
@@ -10,3 +10,5 @@ additional-imports:
     alias: "."
 output-options:
   skip-prune: true
+  user-templates:
+    echo/echo-register.tmpl: "// echo-register.tmpl (empty)"
