--- a/backend/domain/.oapi-codegen.yml
+++ b/backend/domain/.oapi-codegen.yml
@@ -8,3 +8,23 @@ compatibility:
 additional-imports: []
 output-options:
   skip-prune: true
+  user-templates:
+    request-bodies.tmpl: "// request-bodies.tmpl (empty)"
+
+    param-types.tmpl: |
+      {{range .}}{{$opid := .OperationId}}
+      {{range .TypeDefinitions}}{{$typeNameHead := slice .TypeName 0 4}}
+      {{if ne $typeNameHead "Path"}}
+      // {{.TypeName}} defines parameters for {{$opid}}.
+      type {{.TypeName}} {{if .IsAlias}}={{end}} {{.Schema.TypeDecl}}
+      {{end}}
+      {{end}}
+      {{end}}
+
+    typedef.tmpl: |
+      {{range .Types}}{{$typeNameHead := slice .TypeName 0 4}}
+      {{if ne $typeNameHead "Resp"}}
+      {{if .Schema.Description}}{{toGoComment .Schema.Description .TypeName}}{{else}}// {{.TypeName}} defines model for {{.JsonName}}.{{end}}
+      type {{.TypeName}} {{.Schema.TypeDecl}}
+      {{end}}
+      {{end}}
