doc: oapi-codgenのテンプレートについてのコメントを追加

--- a/backend/domain/.oapi-codegen.yml
+++ b/backend/domain/.oapi-codegen.yml
@@ -9,6 +9,7 @@ additional-imports: []
 output-options:
   skip-prune: true
   user-templates:
+    # see: https://github.com/deepmap/oapi-codegen/tree/master/pkg/codegen/templates
     request-bodies.tmpl: "// request-bodies.tmpl (empty)"
 
     param-types.tmpl: |
