refactor: server/*, handler/* を presenter/rest/ へ移動

--- a/backend/presenter/rest/.oapi-codegen.yml
+++ b/backend/presenter/rest/.oapi-codegen.yml
@@ -1,5 +1,5 @@
 # available config options: https://github.com/deepmap/oapi-codegen/blob/master/pkg/codegen/configuration.go
-package: server
+package: rest
 output: interface.gen.go
 generate:
   echo-server: true
