--- a/backend/repository/pgsql/sqlc.yaml
+++ b/backend/repository/pgsql/sqlc.yaml
@@ -2,18 +2,19 @@ version: "2"
 sql:
   - engine: postgresql
     queries: query.sql
-    schema: ../../db/schema.sql
+    schema: ../../../db/schema.sql
     gen:
       go:
-        package: repository
+        package: pgsql
         out: ./
         output_db_file_name: db.gen.go
         output_models_file_name: models.gen.go
         output_querier_file_name: querier.gen.go
         output_files_suffix: .gen
-        emit_interface: true
+        emit_interface: false
         emit_db_tags: true
         overrides:
           - db_type: citext
-            go_type:
-              type: string
+            go_type: { type: string }
+          - db_type: serial
+            go_type: { type: uint64 }
