--- a/backend/repository/pgsql/_sqlc/sqlc.yml
+++ b/backend/repository/pgsql/_sqlc/sqlc.yml
@@ -1,12 +1,12 @@
 version: "2"
 sql:
   - engine: postgresql
-    queries: query.sql
-    schema: ../../../db/schema.sql
+    queries: ./query.sql
+    schema: ./schema.sql
     gen:
       go:
         package: pgsql
-        out: ./
+        out: ../
         output_db_file_name: db.gen.go
         output_models_file_name: models.gen.go
         output_querier_file_name: querier.gen.go
@@ -14,7 +14,7 @@ sql:
         emit_interface: false
         emit_db_tags: true
         overrides:
-          - db_type: citext
-            go_type: { type: string }
-          - db_type: serial
-            go_type: { type: uint64 }
+          - db_type: user_id
+            go_type: github.com/arumakan1727/todo-app-go-react/domain.UserID
+          - db_type: task_id
+            go_type: github.com/arumakan1727/todo-app-go-react/domain.TaskID
