--- a/backend/repository/pgsql/sqlcgen/sqlc.yml
+++ b/backend/repository/pgsql/sqlcgen/sqlc.yml
@@ -5,8 +5,8 @@ sql:
     schema: ./schema.sql
     gen:
       go:
-        package: pgsql
-        out: ../
+        package: sqlcgen
+        out: .
         output_db_file_name: db.gen.go
         output_models_file_name: models.gen.go
         output_querier_file_name: querier.gen.go
