--- a/backend/repository/pgsql/sqlcgen/sqlc.yml
+++ b/backend/repository/pgsql/sqlcgen/sqlc.yml
@@ -1,3 +1,4 @@
+# see: https://docs.sqlc.dev/en/stable/reference/config.html
 version: "2"
 sql:
   - engine: postgresql
@@ -13,6 +14,7 @@ sql:
         output_files_suffix: .gen
         emit_interface: false
         emit_db_tags: true
+        emit_methods_with_db_argument: true
         overrides:
           - db_type: user_id
             go_type: github.com/arumakan1727/todo-app-go-react/domain.UserID
