change: トークンのCookie名をtodoAppAuthToken->todoApiAuthTokenに変更

--- a/api-spec/open-api.yaml
+++ b/api-spec/open-api.yaml
@@ -176,7 +176,7 @@ paths:
 components:
   securitySchemes:
     AuthCookie:
-      name: todoAppAuthToken
+      name: todoApiAuthToken
       type: apiKey
       in: cookie
   schemas:
