feat: task関連のAPIの統合テストを実装

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,7 @@
 .DEFAULT_GOAL   := help
 DB_SERVICE      := postgres
 REDIS_SERVICE   := redis
-GO_TEST_FLAG    := -race -shuffle=on
+GO_STRICT_TEST_FLAG    := -v -race -shuffle=on
 RED      := \033[31m
 CYAN     := \033[36m
 MAGENTA  := \033[35m
@@ -30,19 +30,19 @@ TODO_SERVE_HOST ?= 127.0.0.1
 
 .PHONY:	test/all
 test/all:	## Execute all tests
-	go test $(GO_TEST_FLAG) ./...
+	go test ./...
 
 .PHONY:	test/repository
 test/repository:	## Execute tests for ./repository/...
-	go test $(GO_TEST_FLAG) ./repository/...
+	go test $(GO_STRICT_TEST_FLAG) ./repository/...
 
 .PHONY:	test/domain
 test/domain:	## Execute tests for ./domain/...
-	go test $(GO_TEST_FLAG) ./domain/...
+	go test $(GO_STRICT_TEST_FLAG) ./domain/...
 
 .PHONY:	test/presenter
 test/presenter:	## Execute tests for ./presenter/...
-	go test $(GO_TEST_FLAG) ./presenter/...
+	go test $(GO_STRICT_TEST_FLAG) ./presenter/...
 
 .PHONY:	fmt
 fmt:	## Format and overwrite files
